--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-batch")
-    compile("org.hsqldb:hsqldb")
+    compile("org.springframework.boot:spring-boot-starter-test:1.5.3.RELEASE")
+    compile("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:1.3.2")
+    compile("mysql:mysql-connector-java:5.1.6")
+    compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
     testCompile("junit:junit")
 }
