--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     }
 }
 
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
@@ -14,8 +15,8 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 bootJar {
-    baseName = 'gs-batch-processing'
-    version =  '0.1.0'
+    baseName = 'codelab-batch'
+    version =  '0.1.1'
 }
 
 repositories {
@@ -27,9 +28,9 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-batch")
-    compile("org.springframework.boot:spring-boot-starter-test:1.5.3.RELEASE")
-    compile("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:1.3.2")
-    compile("mysql:mysql-connector-java:5.1.6")
+    compile("org.springframework.boot:spring-boot-starter-test")
+    compile("mysql:mysql-connector-java:5.1.46")
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
+    compile("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:1.3.2")
     testCompile("junit:junit")
 }
