--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+	//compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-batch")
     compile("org.springframework.boot:spring-boot-starter-test")
     compile("mysql:mysql-connector-java:5.1.46")
