--- a/build.gradle
+++ b/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     compile("mysql:mysql-connector-java:5.1.46")
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:1.3.2")
+    compile("com.google.guava:guava:26.0-jre")
     testCompile("junit:junit")
 }
