--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,13 @@ dependencies {
 	//compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-batch")
     compile("org.springframework.boot:spring-boot-starter-test")
-    compile("mysql:mysql-connector-java:5.1.46")
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:1.3.2")
+    compile("mysql:mysql-connector-java:5.1.46")
     compile("com.google.guava:guava:26.0-jre")
+    
+    testCompile('org.springframework.batch:spring-batch-test')
     testCompile("junit:junit")
+    
+    compileOnly('org.projectlombok:lombok')
 }
