add docker configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,16 @@ spring:
 logging:
    level:
       org.codelab.batch: INFO
+---
+spring:
+   profiles: docker
+   datasource:
+      jdbc-url: jdbc:mysql://localhost:32771/codelab?useSSL=false
+      username: codej99
+      password: cjstk1
+      driver-class-name: com.mysql.jdbc.Driver
+      hikari:
+         connection-test-query: SELECT 1
+logging:
+   level:
+      org.codelab.batch: INFO
